--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,16 @@
         "laravel/helpers": "^1.2",
         "laravel/passport": "^8.4",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.0"
+        "laravel/ui": "^2.0",
+        "lcobucci/jwt": "3.3.3"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5"
+        "phpunit/phpunit": "^8.5",
+      "ext-json": "*"
     },
     "config": {
         "optimize-autoloader": true,
